# pokemon3d-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  pokemon3d.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  pokemon3d.rockspec  pokemon3d_sdk.lua  pokemon3d_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  pokemon3d_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pokemon3d_sdk.py  pokemon3d_types.py  pyproject.toml
py/core/: context.py  control.py  response.py  utility_type.py
py/entity/: pokemon_entity.py
py/feature/: audit_feature.py  cache_feature.py  clienttrack_feature.py  debug_feature.py  idempotency_feature.py  log_feature.py  netsim_feature.py  retry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_netsim.py  test_pipeline.py  test_pokemon_direct.py  test_pokemon_entity.py  test_primary_utility.py  test_readme_examples.py
py/utility/: feature_add.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_request.py  make_response.py  make_result.py  make_spec.py  prepare_body.py  prepare_params.py  prepare_path.py  result_headers.py  transform_request.py  transform_response.py
(+413 files in other folders)
